# swagger/swagger.json
@@ -3,32 +3,29 @@
   "info": {
     "description": "",
     "version": "2",
-    "title": "Bank"
+    "title": "cscamp"
   },
   "host": "localhost:3000",
   "tags": [
     {
-      "name": "Deposit"
+      "name": "Login"
     },
     {
-      "name": "Withdraw"
-    },
-    {
-      "name": "Transfer"
+      "name": "count"
     }
   ],
   "schemes": [
     "http"
   ],
   "paths": {
-    "/Deposit": {
+    "/login": {
       "post": {
         "tags": [
-          "Deposit"
+          "Login"
         ],
-        "summary": "Deposit money to wallet",
-        "description": "Deposit money to wallet",
-        "operationId": "Deposit money to wallet",
+        "summary": "input id password",
+        "description": "input id password",
+        "operationId": "input id password",
         "consumes": [
           "application/x-www-form-urlencoded"
         ],
@@ -37,33 +34,25 @@
         ],
         "parameters": [
           {
-            "name": "acount",
+            "name": "id",
             "in": "formData",
-            "description": "Acount Owner",
+            "description": "Student id",
             "required": true,
             "type": "string",
-            "default": "2562-34-21-10001"
+            "default": 59050900
           },
           {
-            "name": "acount_id",
+            "name": "password",
             "in": "formData",
-            "description": "password to access acount",
+            "description": "password",
             "required": true,
             "type": "string",
-            "default": 6969
-          },
-          {
-            "name": "deposit",
-            "in": "formData",
-            "description": "amount of money you want to deposit",
-            "required": true,
-            "type": "integer",
-            "default": 1000
+            "default": 1872
           }
         ],
         "responses": {
           "200": {
-            "description": "Created",
+            "description": "Login Success",
             "schema": {
               "properties": {
                 "statusCode": {
@@ -72,7 +61,7 @@
                 },
                 "message": {
                   "type": "string",
-                  "example": "Deposit Success"
+                  "example": "Login Success"
                 }
               }
             }
@@ -88,21 +77,6 @@
                 "message": {
                   "type": "string",
                   "example": "Bad Request"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "unAuthenticate",
-            "schema": {
-              "properties": {
-                "statusCode": {
-                  "type": "string",
-                  "example": 500
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Fail to Connect Database"
                 }
               }
             }
@@ -110,61 +84,20 @@
         }
       }
     },
-    "/Withdraw": {
-      "post": {
+    "/count": {
+      "get": {
         "tags": [
-          "Withdraw"
+          "count"
         ],
-        "summary": "Withdraw money from wallet",
-        "description": "Withdraw money from wallet",
+        "summary": "student in cscamp",
+        "description": "student in cscamp",
         "consumes": [
           "application/x-www-form-urlencoded"
         ],
         "produces": [
           "application/json"
         ],
-        "parameters": [
-          {
-            "name": "acount",
-            "in": "formData",
-            "description": "Acount Owner",
-            "required": true,
-            "type": "string",
-            "default": "2562-34-21-10001"
-          },
-          {
-            "name": "acount_id",
-            "in": "formData",
-            "description": "password to access acount",
-            "required": true,
-            "type": "string",
-            "default": 6969
-          },
-          {
-            "name": "withdraw",
-            "in": "formData",
-            "description": "amount of money you want to withdraw",
-            "required": true,
-            "type": "integer",
-            "default": 1000
-          }
-        ],
         "responses": {
-          "200": {
-            "description": "Created",
-            "schema": {
-              "properties": {
-                "statusCode": {
-                  "type": "string",
-                  "example": 200
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Withdraw Success"
-                }
-              }
-            }
-          },
           "400": {
             "description": "Bad Request",
             "schema": {
@@ -176,117 +109,6 @@
                 "message": {
                   "type": "string",
                   "example": "Bad Request"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "unAuthenticate",
-            "schema": {
-              "properties": {
-                "statusCode": {
-                  "type": "string",
-                  "example": 500
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Fail to Connect Database"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/Transfer": {
-      "post": {
-        "tags": [
-          "Transfer"
-        ],
-        "summary": "Transfer money from wallet to another wallet",
-        "description": "Transfer money from wallet to another wallet",
-        "consumes": [
-          "application/x-www-form-urlencoded"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "acount",
-            "in": "formData",
-            "description": "Acount Owner",
-            "required": true,
-            "type": "string",
-            "default": "2562-34-21-10001"
-          },
-          {
-            "name": "acount_id",
-            "in": "formData",
-            "description": "password to access acount",
-            "required": true,
-            "type": "string",
-            "default": 6969
-          },
-          {
-            "name": "transfer",
-            "in": "formData",
-            "description": "amount of money you want to transfer",
-            "required": true,
-            "type": "integer",
-            "default": 1000
-          },
-          {
-            "name": "sendto",
-            "in": "formData",
-            "description": "Acount Reciver",
-            "required": true,
-            "type": "string",
-            "default": "2562-34-21-10003"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Created",
-            "schema": {
-              "properties": {
-                "statusCode": {
-                  "type": "string",
-                  "example": 200
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Transfer Success"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "schema": {
-              "properties": {
-                "statusCode": {
-                  "type": "string",
-                  "example": 400
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Bad Request"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "unAuthenticate",
-            "schema": {
-              "properties": {
-                "statusCode": {
-                  "type": "string",
-                  "example": 500
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Fail to Connect Database"
                 }
               }
             }
